Versionsänderungen:
===================
####Version 1.4.2:    
- Option hide="Personenanzeige_Lehrveranstaltungen" bei task="mitarbeiter-einzeln" ergänzt         
- Parameter "sortiere_alphabet"=1 ergänzt für Mitarbeiter-Ausgabe    
- Bugfix für Mitarbeiter mit gleichem Namen    

####Version 1.4.1:    
- Bugfix lehrveranstaltungen-einzeln     
- Bugfix text bei mitarbeiter-alle    

####Version 1.4.0:    
- Ausblenden der Lehrveranstaltungstypen bei task="lehrveranstaltungen-alle" mit hide="lv-typ"    
- Ausgabe von Lehrveranstaltungen in Englisch oder Deutsch mit Shortcode-Parameter sprache="E" oder sprache="D"    
- Englische Ausgabe abhängig von der Sprache in den WordPress-Einstellungen eingebaut (wo möglich)    
- Einheitliche Formatierung der Telefonnummern (wo möglich)    
- Bugfix endpoint    
- Einfache Ausgabe für UnivIS-Publikationen ergänzt    

####Version 1.3.3:    
- Gruppierung von Kursterminen bei der Lehrveranstaltungsübersicht   

####Version 1.3.2:    
- Bugfix defekte Lehrveranstaltungstyp-Ausgabe    
- Einzeldarstellung von Mitarbeitern und Lehrveranstaltungen werden innerhalb der Webseite dargestellt und verweisen nicht mehr auf UnivIS    
- Anzeige von UnivIS-Publikationen nicht mehr möglich    
- Neue Shortcode-Parameter:   
* univisid (für sämtliche Personen-UnivIS-IDs, ersetzt dozentid und auch bei task="mitarbeiter-einzeln" möglich)    
* lv_id (ersetzt id bei task="lehrveranstaltungen-einzeln")    
* sem (für Angabe von Lehrveranstaltungen in speziellen Semestern, in der Form sem="2017w")    
* neues Format: Telefonbuchdarstellung (Shortcode-Parameter task="mitarbeiter-telefonbuch")     
* show bzw. hide für weitere Optionen    
* standardmäßig sind alle Fehlerausgaben jetzt ausgeblendet, Einblenden mit show="errormsg"   

####Version 1.2.7:     
- Erweiterung lecturetypen HIS (Sprachhistorisches Seminar), US (Übungsseminar), PPU (Propädeutische Übung)    

####Version 1.2.6:     